--- a/index.html
+++ b/index.html
@@ -371,17 +371,19 @@
 
 			$(function () {
 				$(window).scroll(function () {
-					if ($(this).scrollTop() > 80) {
-						$('nav').slideDown();
-					} else {
-						$('nav').slideUp();
-					}
+					if( $window.width() > 767) {
+						if ($(this).scrollTop() > 80) {
+							$('nav').slideDown();
+						} else {
+							$('nav').slideUp();
+						}
 
-					var yPos = -($window.scrollTop() / $bgobj.data('speed'));
-					// Put together the final background position
-					var coords = '50% '+ yPos + 'px';
-					// Move the background
-					$bgobj.css({ backgroundPosition: coords });
+						var yPos = -($window.scrollTop() / $bgobj.data('speed'));
+						// Put together the final background position
+						var coords = '50% '+ yPos + 'px';
+						// Move the background
+						$bgobj.css({ backgroundPosition: coords });
+					}
 				});
 			});
 		});
