- Update styling - Add short bio - Replace background image with a compressed version - Add new skill

--- a/index.html
+++ b/index.html
@@ -108,17 +108,19 @@
 		<a class="nav-link" name="s2"></a>
 		<div class="row">
 			<h3 class="section-title">About</h3>
-			<div class="col s12 m5 l3">
-				<div class="me-img-container">
-					<img src="images/profile.jpg" class="me-img circle">
-				</div>
-			</div>
-			<div id="quote-box" class="col s12 m7 l9">
+			<div id="quote-box" class="col s12 m12 l4">
 				<i class="fa fa-quote-left quote"></i>
-				<p class="quote-text">Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself.</p>
+				<p class="quote-text">A man who views the world the same at 50 as he did at 20 has wasted 30 years of his life.</p>
 				<i class="fa fa-quote-right quote right"></i>
 				<br><br>
-				<p class="quote-author right-align">- Rumi</p>
+				<p class="quote-author right-align">- Muhammad Ali</p>
+			</div>
+			<div class="me-img-container col s12 m12 l4">
+				<img src="images/profile.jpg" class="me-img circle">
+			</div>
+			<div class="col s12 m12 l4">
+				<br>
+				<p class="quote-text">I'm a University of Waterloo Systems Design Engineering student who's always looking to learn new skills, build cool stuff, and keep hustling.</p>
 			</div>
 		</div>
 	</section>
