Add new skill missing from last commit

--- a/index.html
+++ b/index.html
@@ -175,12 +175,13 @@
 			</div>
 			<div class="col s12 m6 l3">
 				<div class="skill-list">
-				<h5>Hardware</h5>
+				<h5>Platforms</h5>
 					<ul>
 						<li>Myo armband</li>
 						<li>Leap Motion</li>
 						<li>Arduino</li>
 						<li>Raspberry Pi</li>
+						<li>IBM Watson</li>
 					</ul>
 				</div>
 			</div>
