Update resume, user counts, and links

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
 					    <div class="card-detail-title">Iqra</div><i class="material-icons right top-right-close">close</i></span>
-					    <p>I am the founder and lead developer of Iqra, an app for searching the Quran using speech recognition. It currently has 4300+ downloads and a rating of 4.8/5 on the Play store.</p>
+					    <p>I am the founder and lead developer of Iqra, an app for searching the Quran using speech recognition. It currently has over 5000 downloads and a rating of 4.8/5 on the Play store.</p>
 					</div>
 				</div>
 			</div>
@@ -247,7 +247,7 @@
 					</div>
 					<div class="card-content">
 					    <span class="card-title activator grey-text text-darken-4"><div class="card-main-title">Ramadan Hub</div><i class="material-icons right top-right-more">more_vert</i></span>
-					    <p><a href="http://ramadanhub.com/">ramadanhub.com</a></p>
+					    <br>
 					</div>
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
@@ -268,7 +268,7 @@
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
 					    <div class="card-detail-title">Signup Block</div><i class="material-icons right top-right-close">close</i></span>
-					    <p>A Firefox add-on and Chrome extension for removing signup boxes on websites. Currently has over 1300 users.</p>
+					    <p>A Firefox add-on and Chrome extension for removing signup boxes on websites. Currently has over 1700 users.</p>
 					</div>
 				</div>
 			</div>
@@ -279,7 +279,7 @@
 					</div>
 					<div class="card-content">
 					    <span class="card-title activator grey-text text-darken-4"><div class="card-main-title">StudySpaceUW</div><i class="material-icons right top-right-more">more_vert</i></span>
-					    <p><a href="http://studyspaceuw.com">studyspaceuw.com</a></p>
+					    <br>
 					</div>
 					<div class="card-reveal">
 					    <span class="card-title grey-text text-darken-4">
